Fix overlapping issue with NavArrow and z-index of animation

--- a/src/components/NavArrow/NavArrow.sass
+++ b/src/components/NavArrow/NavArrow.sass
@@ -4,6 +4,8 @@
 .nav-arrow-container
   height: 4.2rem
   width: 100%
+  position: relative
+  z-index: 6
 
 .nav-arrow
   display: flex
